Fix some styling on mobile

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -14,8 +14,8 @@
             margin-left: 0;
             margin-right: 0;
 
-            .col-md-3,
-            .col-md-9 {
+            .col-3,
+            .col-9 {
                 padding-left: 0;
                 padding-right: 0;
             }
